[tool.poetry]
name = "openrpg"
version = "0.1.0"
description = ""
authors = ["Braddy Peralta <braddy@peralta.sh>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
